--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: RcLoggers
-Title: What the Package Does (One Line, Title Case)
+Title: Provides functions for programmatic access to AIMS MMP Loggers
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Adam", "Shand", , "adamshand22@gmail.com", role = c("aut", "cre"))
+Description: This package contains functions that provide programmatic access to the AIMS MMP water quality loggers. The user can select from a range of years, loggers, and variables, or select several to access at once.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
+Imports: 
+    dplyr,
+    glue,
+    lubridate,
+    ncdf4,
+    purrr,
+    stringr,
+    tidyr,
+    xml2
